--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "selection-manager",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "./node_modules/.bin/mocha --reporter spec",
-    "build": "babel src --out-dir dist && browserify scripts/usage.js -o browser/bundle.js"
+    "build": "babel src --out-dir dist",
+    "browser": "babel src --out-dir dist && browserify scripts/usage.js -o browser/bundle.js"
   },
   "repository": {
     "type": "git",
