--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "selection-manager",
-  "version": "1.0.25",
+  "version": "1.0.26",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
     "test": "./node_modules/.bin/mocha --reporter spec",
-    "build": "babel src --out-dir dist",
-    "browser:build": "babel src --out-dir dist && browserify examples/selection.js -o browser/bundle.js"
+    "build": "./node_modules/.bin/babel src --out-dir dist",
+    "browser:build": "./node_modules/.bin/babel src --out-dir dist && browserify examples/selection.js -o browser/bundle.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/ravihamsa/selection-manager#readme",
   "devDependencies": {
+    "babel-cli": "^6.18.0",
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
