--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "selection-manager",
-  "version": "1.0.27",
+  "version": "1.0.28",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -24,6 +24,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "chai": "^3.5.0",
-    "mocha": "^2.5.3"
+    "mocha": "^2.5.3",
+    "sinon": "^2.1.0"
   }
 }
